--- a/index.html
+++ b/index.html
@@ -53,10 +53,13 @@
       </div>
     </section>
     <!-- бегущая строка -->
-    <div class="running line">
-      <p>здесь ваши самые глубокие страхи оживают!</p>
-    </div>
+
     <section class="section-2">
+      <div class="running-line">
+        <p>здесь ваши самые глубокие страхи оживают!</p>
+      </div>
+    </section>
+    <section class="section-3">
       <div><!-- тут будет спрайт анимация --></div>
       <div>
         <h1 class="shake">
