--- a/index.html
+++ b/index.html
@@ -60,7 +60,9 @@
       </div>
     </section>
     <section class="section-3">
-      <div><!-- тут будет спрайт анимация --></div>
+      <div class="sprite">
+        <img src="images/sprite.png" alt="маска разделяется в две" />
+      </div>
       <div>
         <h1 class="shake">
           страшно <br />
